# irssi-icq

irssi-icq/: AUTHORS  Makefile.am  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.in
irssi-icq/src/: Makefile.am
irssi-icq/src/core/: Makefile.am  icq-buddy.c  icq-buddy.h  icq-commands.c  icq-commands.h  icq-core.c  icq-protocol.c  icq-protocol.h  icq-queries.c  icq-queries.h  icq-servers-reconnect.c  icq-servers.c  icq-servers.h  icq-session.c  icq.h  module.h
irssi-icq/src/fe-common/: Makefile.am  fe-icq.c  module-formats.c  module-formats.h  module.h
irssi-icq/src/gaimglue/: Makefile.am  blist.c  blist.h  buddyicon.c  connection.c  conversation.c  conversation.h  debug.h  gaim_glue.c  html.c  log.c  notify.c  plugin.c  prpl.c  server.c
irssi-icq/src/protocols/: Makefile.am
irssi-icq/src/protocols/gg/: common.c  gg.c  libgg.c  libgg.h  protocol.txt
irssi-icq/src/protocols/msn/: state.c
irssi-icq/src/protocols/oscar/: Makefile.am  ft.c  liboscar.la  oscar.c
irssi-icq/src/protocols/yahoo/: yahoo.c
irssi-icq/src/protocols/zephyr/: ZAsyncLocate.c  ZCkAuth.c  ZCkIfNot.c  ZClosePort.c  ZCmpUID.c  ZCmpUIDP.c  ZFlsLocs.c  ZFlsSubs.c  ZFmtAuth.c  ZFmtList.c  ZFmtNotice.c  ZFmtRaw.c  ZFmtRawLst.c  ZFmtSmRLst.c  ZFmtSmRaw.c  ZFreeNot.c  ZGetLocs.c  ZGetSender.c  ZGetSubs.c  ZGetWGPort.c  ZIfNotice.c  ZInit.c  ZLocations.c  ZMakeAscii.c  ZMkAuth.c  ZNewLocU.c  ZOpenPort.c  ZParseNot.c  ZPeekIfNot.c  ZPeekNot.c  ZPeekPkt.c  ZPending.c  ZReadAscii.c  ZRecvNot.c  ZRecvPkt.c  ZRetSubs.c  ZSendList.c  ZSendNot.c  ZSendPkt.c  ZSendRLst.c  (+14 more)
